--- a/Vitis/single_kernel/Makefile
+++ b/Vitis/single_kernel/Makefile
@@ -1,11 +1,7 @@
 VPP := $(XILINX_VITIS)/bin/v++
 EMCONFIGUTIL := $(XILINX_VITIS)/bin/emconfigutil
 TARGET:= hw
-DSA := xilinx_u250_gen3x16_xdma_3_1_202020_1
-
-# sources
-HOST_SRC := ./host/host.cpp ../common/cmdparser/cmdlineparser.cpp ../common/logger/logger.cpp
-KRNL_SRC := ./vadd_kernel/krnl_vadd.cpp
+DEVICE:= xilinx_u250_gen3x16_xdma_3_1_202020_1
 
 # kernel targets
 KRNL_XO := kernel.$(TARGET).xo
@@ -17,16 +13,16 @@ HOST_EXE := host.exe
 # config files target
 EMCONFIG_FILE := emconfig.json
 
-VPP_OPTS := -s -t $(TARGET) --platform $(DSA)
+VPP_OPTS := -s -t $(TARGET) --platform $(DEVICE)
 VPP_OPTS += --temp_dir ./all_builds/$(TARGET)
 VPP_OPTS += --report_dir ./all_logs/$(TARGET)
 VPP_OPTS += --log_dir ./all_logs/$(TARGET)
 
-CFLAGS := -g -std=c++1y -I$(XILINX_XRT)/include -I../common/cmdparser -I../common/logger
+CFLAGS := -g -std=c++1y -I$(XILINX_XRT)/include 
 LFLAGS := -L$(XILINX_XRT)/lib -lOpenCL -lxrt_coreutil -lrt -luuid
 
 # run time args
-EXE_OPT := -x kernel.${TARGET}.xclbin
+CMD_ARGS:= kernel.${TARGET}.xclbin
 
 # primary build targets
 .PHONY: xclbin host all
@@ -43,21 +39,20 @@ cleanall: clean
 	rm -rf all_* *.log *.xclbin *.compile_summary *.link_summary *.info *.xo
 
 # kernel rules
-$(KRNL_XO): $(KRNL_SRC)
+$(KRNL_XO): ./vadd_kernel/krnl_vadd.cpp
 	$(RM) $@
 	$(VPP) $(VPP_OPTS) -c -k krnl_vadd -I'$(<D)' -o $@ $+
-
 
 $(XCLBIN): $(KRNL_XO) 
 	$(VPP) $(VPP_OPTS) -l -o $@ $(KRNL_XO) $+ 
 
 # host rules
-$(HOST_EXE): $(HOST_SRC)
+$(HOST_EXE): ./host/host.cpp 
 	g++ $(CFLAGS) -o $@ $+ $(LFLAGS)
 	@echo 'Compiled Host Executable: $(HOST_EXE)'
 
 $(EMCONFIG_FILE):
-	$(EMCONFIGUTIL) --nd 1 --od . --platform $(DSA)
+	$(EMCONFIGUTIL) --nd 1 --od . --platform $(DEVICE)
 
 run: $(XCLBIN) $(HOST_EXE) $(EMCONFIG_FILE)
-	XCL_EMULATION_MODE=${TARGET} ./$(HOST_EXE) $(EXE_OPT)
+	XCL_EMULATION_MODE=${TARGET} ./$(HOST_EXE) $(CMD_ARGS)
