Add missing directives

--- a/Modeling/Pointers/basic_arithmetic/hls_config.cfg
+++ b/Modeling/Pointers/basic_arithmetic/hls_config.cfg
@@ -7,5 +7,6 @@ syn.file=pointer_arith.c
 syn.top=pointer_arith
 tb.file=pointer_arith_test.c
 tb.file=result.golden.dat
+syn.directive.interface=pointer_arith mode=m_axi depth=5 d
 
 
