--- a/Modeling/fixed_point_sqrt/hls_config.cfg
+++ b/Modeling/fixed_point_sqrt/hls_config.cfg
@@ -6,5 +6,8 @@ flow_target=vitis
 syn.file=fxp_sqrt_top.cpp
 syn.top=fxp_sqrt_top
 tb.file=fxp_sqrt_test.cpp
+syn.directive.interface=fxp_sqrt_top in_val register
+syn.directive.interface=fxp_sqrt_top mode=ap_ctrl_hs return register
+syn.directive.pipeline=fxp_sqrt_top
 
 
