--- a/Modeling/variable_bound_loops/hls_config.cfg
+++ b/Modeling/variable_bound_loops/hls_config.cfg
@@ -7,5 +7,6 @@ syn.file=loop_var.cpp
 syn.top=loop_var
 tb.file=loop_var_test.cpp
 tb.file=result.golden.dat
+syn.directive.unroll=loop_var/LOOP_X
 
 
