--- a/Pipelining/Loops/perfect_loop/hls_config.cfg
+++ b/Pipelining/Loops/perfect_loop/hls_config.cfg
@@ -7,5 +7,6 @@ syn.file=loop_perfect.cpp
 syn.top=loop_perfect
 tb.file=loop_perfect_test.cpp
 tb.file=result.golden.dat
+syn.directive.pipeline=loop_perfect/LOOP_J
 
 
