--- a/Pipelining/Loops/using_free_running_pipeline/hls_config.cfg
+++ b/Pipelining/Loops/using_free_running_pipeline/hls_config.cfg
@@ -10,5 +10,7 @@ tb.file=result.golden.dat
 syn.compile.pipeline_style=frp
 syn.dataflow.default_channel=fifo
 syn.dataflow.fifo_depth=16
+syn.directive.interface=free_pipe_mult mode=ap_fifo B
+syn.directive.interface=free_pipe_mult mode=ap_fifo out
 
 
