--- a/Modeling/Pointers/stream_good/hls_config.cfg
+++ b/Modeling/Pointers/stream_good/hls_config.cfg
@@ -7,5 +7,7 @@ syn.file=pointer_stream_good.c
 syn.top=pointer_stream_good
 tb.file=pointer_stream_good_test.c
 tb.file=result.golden.dat
+syn.directive.interface=pointer_stream_good mode=ap_fifo depth=4 d_i
+syn.directive.interface=pointer_stream_good mode=ap_fifo depth=2 d_o
 
 
