--- a/Pipelining/Loops/imperfect_loop/hls_config.cfg
+++ b/Pipelining/Loops/imperfect_loop/hls_config.cfg
@@ -7,5 +7,6 @@ syn.file=loop_imperfect.cpp
 syn.top=loop_imperfect
 tb.file=loop_imperfect_test.cpp
 tb.file=result.golden.dat
+syn.directive.pipeline=loop_imperfect/LOOP_J
 
 
