Added output_format=rtl to all config files

--- a/Interface/Memory/max_widen_port_width/hls_config.cfg
+++ b/Interface/Memory/max_widen_port_width/hls_config.cfg
@@ -9,4 +9,5 @@ tb.file=example_test.cpp
 syn.interface.m_axi_alignment_byte_size=64
 syn.interface.m_axi_max_widen_bitwidth=256
 
+syn.output.format=rtl
 
