--- a/Modeling/Pointers/stream_better/hls_config.cfg
+++ b/Modeling/Pointers/stream_better/hls_config.cfg
@@ -10,4 +10,5 @@ tb.file=result.golden.dat
 syn.directive.interface=pointer_stream_better mode=ap_hs d_i
 syn.directive.interface=pointer_stream_better mode=ap_hs d_o
 
+syn.output.format=rtl
 
