--- a/Modeling/using_arbitrary_precision_casting/hls_config.cfg
+++ b/Modeling/using_arbitrary_precision_casting/hls_config.cfg
@@ -8,4 +8,5 @@ syn.top=arbitrary_precision_casting
 tb.file=arbitrary_precision_casting_test.cpp
 tb.file=result.golden.dat
 
+syn.output.format=rtl
 
