--- a/Pipelining/Loops/using_free_running_pipeline/hls_config.cfg
+++ b/Pipelining/Loops/using_free_running_pipeline/hls_config.cfg
@@ -13,4 +13,5 @@ syn.dataflow.fifo_depth=16
 syn.directive.interface=free_pipe_mult mode=ap_fifo B
 syn.directive.interface=free_pipe_mult mode=ap_fifo out
 
+syn.output.format=rtl
 
