Fixed for adding depth to directive settings in cfg files

--- a/Modeling/using_C++_templates_for_multiple_instances/hls_config.cfg
+++ b/Modeling/using_C++_templates_for_multiple_instances/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vitis
 syn.file=cpp_template.cpp
 syn.top=cpp_template
 tb.file=cpp_template_test.cpp
-
+syn.directive.interface=cpp_template out mode=m_axi depth=1
 syn.output.format=rtl
 
