--- a/Interface/Memory/ram_uram/hls_config.cfg
+++ b/Interface/Memory/ram_uram/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=resource_uram.cpp
 syn.top=resource_uram
 tb.file=resource_uram_test.cpp
 tb.file=result.golden.dat
-
+syn.directive.interface=resource_uram dataout mode=m_axi depth=1
 syn.output.format=rtl
 
