--- a/Misc/malloc_removed/hls_config.cfg
+++ b/Misc/malloc_removed/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=malloc_removed.c
 syn.top=malloc_removed
 tb.file=malloc_removed_test.c
 tb.file=result.golden.dat
-
-syn.output.format=rtl
+package.output.format=xo
+package.output.syn=false
 
