--- a/Misc/rtl_as_blackbox/hls_config.cfg
+++ b/Misc/rtl_as_blackbox/hls_config.cfg
@@ -8,6 +8,6 @@ syn.file=example.cpp
 syn.top=example
 tb.file=example_test.cpp
 tb.file=result.golden.dat
-
-syn.output.format=rtl
+package.output.format=ip_catalog
+package.output.syn=false
 
