--- a/Modeling/Pointers/stream_better/hls_config.cfg
+++ b/Modeling/Pointers/stream_better/hls_config.cfg
@@ -9,6 +9,6 @@ tb.file=pointer_stream_better_test.c
 tb.file=result.golden.dat
 syn.directive.interface=pointer_stream_better mode=ap_hs d_i
 syn.directive.interface=pointer_stream_better mode=ap_hs d_o
-
-syn.output.format=rtl
+package.output.format=ip_catalog
+package.output.syn=false
 
