--- a/Modeling/Pointers/stream_good/hls_config.cfg
+++ b/Modeling/Pointers/stream_good/hls_config.cfg
@@ -9,5 +9,6 @@ tb.file=pointer_stream_good_test.c
 tb.file=result.golden.dat
 syn.directive.interface=pointer_stream_good d_i depth=4 mode=ap_fifo
 syn.directive.interface=pointer_stream_good d_o depth=2 mode=ap_fifo
-syn.output.format=rtl
+package.output.format=ip_catalog
+package.output.syn=false
 
