--- a/Modeling/fixed_point_sqrt/hls_config.cfg
+++ b/Modeling/fixed_point_sqrt/hls_config.cfg
@@ -9,6 +9,6 @@ tb.file=fxp_sqrt_test.cpp
 syn.directive.interface=fxp_sqrt_top in_val register
 syn.directive.interface=fxp_sqrt_top mode=ap_ctrl_hs return register
 syn.directive.pipeline=fxp_sqrt_top
-
-syn.output.format=rtl
+package.output.format=xo
+package.output.syn=false
 
