--- a/Modeling/using_arbitrary_precision_arith/hls_config.cfg
+++ b/Modeling/using_arbitrary_precision_arith/hls_config.cfg
@@ -11,6 +11,6 @@ syn.directive.interface=cpp_ap_int_arith out1 mode=m_axi depth=1
 syn.directive.interface=cpp_ap_int_arith out2 mode=m_axi depth=1
 syn.directive.interface=cpp_ap_int_arith out3 mode=m_axi depth=1
 syn.directive.interface=cpp_ap_int_arith out4 mode=m_axi depth=1
-
-syn.output.format=rtl
+package.output.format=xo
+package.output.syn=false
 
