--- a/Modeling/using_arbitrary_precision_casting/hls_config.cfg
+++ b/Modeling/using_arbitrary_precision_casting/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=arbitrary_precision_casting.cpp
 syn.top=arbitrary_precision_casting
 tb.file=arbitrary_precision_casting_test.cpp
 tb.file=result.golden.dat
-
-syn.output.format=rtl
+package.output.format=ip_catalog
+package.output.syn=false
 
