--- a/Modeling/using_fixed_point/hls_config.cfg
+++ b/Modeling/using_fixed_point/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=cpp_ap_fixed.cpp
 syn.top=cpp_ap_fixed
 tb.file=cpp_ap_fixed_test.cpp
 tb.file=result.golden.dat
-
-syn.output.format=rtl
+package.output.format=ip_catalog
+package.output.syn=false
 
