--- a/Interface/Aggregation_Disaggregation/aggregation_of_struct/hls_config.cfg
+++ b/Interface/Aggregation_Disaggregation/aggregation_of_struct/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vitis
 syn.file=example.cpp
 syn.top=dut
 tb.file=example_test.cpp
-
-syn.output.format=rtl
+package.output.format=xo
+package.output.syn=false
 
