--- a/Interface/Memory/coefficient_filter/hls_config.cfg
+++ b/Interface/Memory/coefficient_filter/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vivado
 syn.file=hamming_window.c
 syn.top=hamming_window
 tb.file=hamming_window_test.c
-
-syn.output.format=rtl
+package.output.format=ip_catalog
+package.output.syn=false
 
