--- a/Interface/Memory/max_widen_port_width/hls_config.cfg
+++ b/Interface/Memory/max_widen_port_width/hls_config.cfg
@@ -8,6 +8,6 @@ syn.top=example
 tb.file=example_test.cpp
 syn.interface.m_axi_alignment_byte_size=64
 syn.interface.m_axi_max_widen_bitwidth=256
-
-syn.output.format=rtl
+package.output.format=ip_catalog
+package.output.syn=false
 
