--- a/Interface/Memory/using_axi_master/hls_config.cfg
+++ b/Interface/Memory/using_axi_master/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vitis
 syn.file=example.cpp
 syn.top=example
 tb.file=example_test.cpp
-
-syn.output.format=rtl
+package.output.format=xo
+package.output.syn=false
 
