--- a/Modeling/Pointers/basic_arithmetic/hls_config.cfg
+++ b/Modeling/Pointers/basic_arithmetic/hls_config.cfg
@@ -8,6 +8,6 @@ syn.top=pointer_arith
 tb.file=pointer_arith_test.c
 tb.file=result.golden.dat
 syn.directive.interface=pointer_arith mode=m_axi depth=5 d
-
-syn.output.format=rtl
+package.output.format=ip_catalog
+package.output.syn=false
 
