--- a/Modeling/Pointers/multiple_pointers/hls_config.cfg
+++ b/Modeling/Pointers/multiple_pointers/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=pointer_multi.c
 syn.top=pointer_multi
 tb.file=pointer_multi_test.c
 tb.file=result.golden.dat
-
-syn.output.format=rtl
+package.output.format=xo
+package.output.syn=false
 
