--- a/Modeling/Pointers/using_double/hls_config.cfg
+++ b/Modeling/Pointers/using_double/hls_config.cfg
@@ -8,5 +8,6 @@ syn.top=pointer_double
 tb.file=pointer_double_test.c
 tb.file=result.golden.dat
 syn.directive.interface=pointer_double flag mode=m_axi depth=1
-syn.output.format=rtl
+package.output.format=xo
+package.output.syn=false
 
