--- a/Task_level_Parallelism/Control_driven/Channels/merge_split/split_round_robin/hls_config.cfg
+++ b/Task_level_Parallelism/Control_driven/Channels/merge_split/split_round_robin/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vitis
 syn.file=test.cpp
 syn.top=dut
 tb.file=test_tb.cpp
-
-syn.output.format=rtl
+package.output.format=xo
+package.output.syn=false
 
