--- a/Task_level_Parallelism/Control_driven/Channels/using_stream_of_blocks/hls_config.cfg
+++ b/Task_level_Parallelism/Control_driven/Channels/using_stream_of_blocks/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=diamond.cpp
 syn.top=diamond
 tb.file=diamond_test.cpp
 tb.file=result.golden.dat
-
-syn.output.format=rtl
+package.output.format=xo
+package.output.syn=false
 
