--- a/Vitis/single_kernel/vadd_kernel/hls_config.cfg
+++ b/Vitis/single_kernel/vadd_kernel/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vivado
 syn.file=krnl_vadd.cpp
 syn.top=krnl_vadd
 tb.file=krnl_vadd_test.cpp
-
-syn.output.format=rtl
+package.output.format=ip_catalog
+package.output.syn=false
 
