Revert "Update for 2023.2 config ini package.output.* changes"
This reverts commit 22a05379a9278e93a65aea50920fcd2638a9ddc2.

--- a/Interface/Aggregation_Disaggregation/aggregation_of_m_axi_ports/hls_config.cfg
+++ b/Interface/Aggregation_Disaggregation/aggregation_of_m_axi_ports/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vitis
 syn.file=example.cpp
 syn.top=dut
 tb.file=example_test.cpp
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
