--- a/Interface/Aggregation_Disaggregation/aggregation_of_nested_structs/hls_config.cfg
+++ b/Interface/Aggregation_Disaggregation/aggregation_of_nested_structs/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vivado
 syn.file=example.cpp
 syn.top=top
 tb.file=example_test.cpp
-package.output.format=ip_catalog
-package.output.syn=false
+
+syn.output.format=rtl
 
