--- a/Interface/Memory/ecc_flags/hls_config.cfg
+++ b/Interface/Memory/ecc_flags/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=ecc_flags.cpp
 syn.top=ecc_flags
 tb.file=ecc_flags_test.cpp
 tb.file=result.golden.dat
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
