--- a/Interface/Memory/rom_lookup_table_math/hls_config.cfg
+++ b/Interface/Memory/rom_lookup_table_math/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=lookup_math.cpp
 syn.top=lookup_math
 tb.file=lookup_math_test.cpp
 tb.file=result.golden.dat
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
