--- a/Misc/initialization_and_reset/static_array_ROM/hls_config.cfg
+++ b/Misc/initialization_and_reset/static_array_ROM/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vitis
 syn.file=test.cpp
 syn.top=test
 tb.file=test_tb.cpp
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
