--- a/Modeling/using_C++_templates_for_multiple_instances/hls_config.cfg
+++ b/Modeling/using_C++_templates_for_multiple_instances/hls_config.cfg
@@ -7,6 +7,5 @@ syn.file=cpp_template.cpp
 syn.top=cpp_template
 tb.file=cpp_template_test.cpp
 syn.directive.interface=cpp_template out mode=m_axi depth=1
-package.output.format=xo
-package.output.syn=false
+syn.output.format=rtl
 
