--- a/Pipelining/Functions/function_instantiate/hls_config.cfg
+++ b/Pipelining/Functions/function_instantiate/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=example.cpp
 syn.top=top
 tb.file=example_test.cpp
 tb.file=result.golden.dat
-package.output.format=ip_catalog
-package.output.syn=false
+
+syn.output.format=rtl
 
