--- a/Pipelining/Functions/hier_func/hls_config.cfg
+++ b/Pipelining/Functions/hier_func/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=hier_func4.cpp
 syn.top=hier_func4
 tb.file=hier_func4_test.cpp
 tb.file=tb_data
-package.output.format=ip_catalog
-package.output.syn=false
+
+syn.output.format=rtl
 
