--- a/Pipelining/Loops/perfect_loop/hls_config.cfg
+++ b/Pipelining/Loops/perfect_loop/hls_config.cfg
@@ -8,6 +8,6 @@ syn.top=loop_perfect
 tb.file=loop_perfect_test.cpp
 tb.file=result.golden.dat
 syn.directive.pipeline=loop_perfect/LOOP_J
-package.output.format=ip_catalog
-package.output.syn=false
+
+syn.output.format=rtl
 
