--- a/Vitis/multiple_kernels/vadd_kernel/hls_config.cfg
+++ b/Vitis/multiple_kernels/vadd_kernel/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vivado
 syn.file=krnl_vadd.cpp
 syn.top=krnl_vadd
 tb.file=krnl_vadd_test.cpp
-package.output.format=ip_catalog
-package.output.syn=false
+
+syn.output.format=rtl
 
