--- a/Interface/Aggregation_Disaggregation/disaggregation_of_axis_port/hls_config.cfg
+++ b/Interface/Aggregation_Disaggregation/disaggregation_of_axis_port/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vitis
 syn.file=example.cpp
 syn.top=dut
 tb.file=example_test.cpp
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
