--- a/Interface/Memory/manual_burst/manual_burst_example/auto_burst_inference_failure/hls_config.cfg
+++ b/Interface/Memory/manual_burst/manual_burst_example/auto_burst_inference_failure/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=example.cpp
 syn.file=example.h
 syn.top=krnl_transfer
 tb.file=example_tb.cpp
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
