--- a/Interface/Memory/ram_uram/hls_config.cfg
+++ b/Interface/Memory/ram_uram/hls_config.cfg
@@ -8,6 +8,5 @@ syn.top=resource_uram
 tb.file=resource_uram_test.cpp
 tb.file=result.golden.dat
 syn.directive.interface=resource_uram dataout mode=m_axi depth=1
-package.output.format=xo
-package.output.syn=false
+syn.output.format=rtl
 
