--- a/Modeling/Pointers/native_casts/hls_config.cfg
+++ b/Modeling/Pointers/native_casts/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=pointer_cast_native.c
 syn.top=pointer_cast_native
 tb.file=pointer_cast_native_test.c
 tb.file=result.golden.dat
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
