--- a/Modeling/using_C++_templates/hls_config.cfg
+++ b/Modeling/using_C++_templates/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=cpp_template.cpp
 syn.top=cpp_template
 tb.file=cpp_template_test.cpp
 tb.file=result.golden.dat
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
