--- a/Modeling/using_float_and_double/hls_config.cfg
+++ b/Modeling/using_float_and_double/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vitis
 syn.file=fp_mul_pow2.c
 syn.top=double_mul_pow2
 tb.file=fp_mul_pow2_test.c
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
