--- a/Modeling/using_vectors/hls_config.cfg
+++ b/Modeling/using_vectors/hls_config.cfg
@@ -7,6 +7,6 @@ syn.file=example.cpp
 syn.top=example
 tb.file=example_test.cpp
 tb.file_cflags=example_test.cpp,-std=gnu++14
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
