--- a/Modeling/variable_bound_loops/hls_config.cfg
+++ b/Modeling/variable_bound_loops/hls_config.cfg
@@ -8,6 +8,6 @@ syn.top=loop_var
 tb.file=loop_var_test.cpp
 tb.file=result.golden.dat
 syn.directive.unroll=loop_var/LOOP_X
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
