--- a/Pipelining/Loops/imperfect_loop/hls_config.cfg
+++ b/Pipelining/Loops/imperfect_loop/hls_config.cfg
@@ -8,6 +8,6 @@ syn.top=loop_imperfect
 tb.file=loop_imperfect_test.cpp
 tb.file=result.golden.dat
 syn.directive.pipeline=loop_imperfect/LOOP_J
-package.output.format=ip_catalog
-package.output.syn=false
+
+syn.output.format=rtl
 
