--- a/Task_level_Parallelism/Control_driven/Channels/using_fifos/hls_config.cfg
+++ b/Task_level_Parallelism/Control_driven/Channels/using_fifos/hls_config.cfg
@@ -9,6 +9,6 @@ tb.file=diamond_test.cpp
 tb.file=result.golden.dat
 syn.dataflow.default_channel=fifo
 syn.dataflow.fifo_depth=2
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
