--- a/Task_level_Parallelism/Data_driven/simple_data_driven/hls_config.cfg
+++ b/Task_level_Parallelism/Data_driven/simple_data_driven/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vitis
 syn.file=test.cpp
 syn.top=odds_and_evens
 tb.file=test_tb.cpp
-package.output.format=xo
-package.output.syn=false
+
+syn.output.format=rtl
 
