--- a/Vitis/multiple_kernels/vmult_kernel/hls_config.cfg
+++ b/Vitis/multiple_kernels/vmult_kernel/hls_config.cfg
@@ -6,6 +6,6 @@ flow_target=vivado
 syn.file=krnl_vmult.cpp
 syn.top=krnl_vmult
 tb.file=krnl_vmult_test.cpp
-package.output.format=ip_catalog
-package.output.syn=false
+
+syn.output.format=rtl
 
