Fixed flow target to vivado

--- a/Interface/Aggregation_Disaggregation/aggregation_of_struct/hls_config.cfg
+++ b/Interface/Aggregation_Disaggregation/aggregation_of_struct/hls_config.cfg
@@ -2,10 +2,10 @@ part=xcvu9p-flga2104-2-i
 
 [hls]
 clock=5
-flow_target=vitis
+flow_target=vivado
 syn.file=example.cpp
 syn.top=dut
 tb.file=example_test.cpp
-package.output.format=xo
+package.output.format=ip_catalog
 package.output.syn=false
 
