--- a/Array/array_partition_complete/hls_config.cfg
+++ b/Array/array_partition_complete/hls_config.cfg
@@ -5,6 +5,6 @@ clock=10
 flow_target=vivado
 syn.file=matmul_partition.cpp
 syn.top=matmul_partition
-syn.output.format=rtl
 tb.file=matmul_partition_test.cpp
-
+package.output.format=xo
+package.output.syn=false
