--- a/Interface/Memory/lmem_2rw/hls_config.cfg
+++ b/Interface/Memory/lmem_2rw/hls_config.cfg
@@ -6,5 +6,5 @@ flow_target=vivado
 syn.file=vadd.cpp
 syn.top=vadd
 tb.file=vadd_test.cpp
-package.output.format=xo
+package.output.format=ip_catalog
 package.output.syn=false
