--- a/Array/array_partition_block_cyclic/hls_config.cfg
+++ b/Array/array_partition_block_cyclic/hls_config.cfg
@@ -6,5 +6,5 @@ flow_target=vivado
 syn.file=matmul_partition.cpp
 syn.top=matmul_partition
 tb.file=matmul_partition_test.cpp
-package.output.format=xo
+package.output.format=ip_catalog
 package.output.syn=false
