--- a/Interface/Streaming/using_axi_stream_with_custom_side_channel_data_1/hls_config.cfg
+++ b/Interface/Streaming/using_axi_stream_with_custom_side_channel_data_1/hls_config.cfg
@@ -6,6 +6,5 @@ flow_target=vitis
 syn.file=example.cpp
 syn.top=example
 tb.file=example_test.cpp
-
-syn.output.format=rtl
-
+package.output.format=ip_catalog
+package.output.syn=false
