--- a/Task_level_Parallelism/Control_driven/Channels/autorestart/hls_config.cfg
+++ b/Task_level_Parallelism/Control_driven/Channels/autorestart/hls_config.cfg
@@ -2,11 +2,12 @@ part=xcvu9p-flga2104-2-i
 
 [hls]
 clock=5
-flow_target=vitis
+flow_target=vivado
 syn.file=diamond.cpp
 syn.top=diamond
 tb.file=diamond_test.cpp
 tb.file=result.golden.dat
 package.output.format=xo
 package.output.syn=false
-
+cosim.trace_level=all
+cosim.wave_debug=1
