changes for adder example

--- a/Modeling/conditional_control_of_pragmas/using_template_function/hls_config.cfg
+++ b/Modeling/conditional_control_of_pragmas/using_template_function/hls_config.cfg
@@ -1,10 +1,9 @@
-part=xcvu9p-fsgd2104-2-i
+part=xcvu9p-flga2104-2-i
 
 [hls]
+clock=5ns
 flow_target=vivado
-package.output.format=rtl
-package.output.syn=false
+syn.file=adder.cpp
 syn.top=top
-syn.file=full.cpp
-clock=4ns
-tb.file=full.cpp
+tb.file=adder_tb.cpp
+package.output.syn=0
